--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -29,7 +29,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-7442821-21"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-7442821-21');
+    </script>
+
+    <title>Cloud Local Storage</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
